# rsshole

./: LICENSE  rsshole.cabal  rsshole.org  stack.yaml
app/: Main.hs
src/: Scrape.hs  Store.hs
