name:                rsshole
version:             0.1.0.0
synopsis:            Classify RSS items
description:         Please see README.md
homepage:            https://github.com/purcell/rsshole#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Purcell
maintainer:          steve@sanityinc.com
copyright:           2016 Steve Purcell
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable rsshole-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rsshole
  default-language:    Haskell2010

test-suite rsshole-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rsshole
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rsshole
